ingress/apple-orange-ingress/pod.yml
kind: Pod
apiVersion: v1
metadata:
  name: apple-app
  labels:
    app: apple
spec:
  containers:
    - name: apple-app
      image: hashicorp/http-echo
      args:
        - "-text=apple"

---

kind: Service
apiVersion: v1
metadata:
  name: apple-service
spec:
  selector:
    app: apple
  ports:
    - port: 5678 # Default port for image

---
kind: Pod
apiVersion: v1
metadata:
  name: orange-app
  labels:
    app: orange
spec:
  containers:
    - name: orange-app
      image: hashicorp/http-echo
      args:
        - "-text=orange"

---

kind: Service
apiVersion: v1
metadata:
  name: orange-service
spec:
  selector:
    app: orange
  ports:
    - port: 5678 # Default port for image
